--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#cfd"
-    tools:context=".MainActivity">
+    android:id="@+id/container"
+    tools:context="com.example.newgps.MainActivity"
+    tools:ignore="MergeRootFrame"
+    >
 
     <LinearLayout
         android:gravity="center"
@@ -32,19 +35,33 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
-
     </LinearLayout>
 
-    <ScrollView
-        android:layout_margin="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <TextView
 
-        <TextView
-            android:id="@+id/text_view"
-            android:textColor="#000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </ScrollView>
+        android:id="@+id/text_view"
+        android:layout_margin="20dp"
+        android:textColor="#000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+
+        android:id="@+id/text_gyro"
+        android:layout_margin="20dp"
+        android:textColor="#000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/Tweet1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </TextView>
+
+
+
+
+
 
 </LinearLayout>
