--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +9,16 @@
     android:id="@+id/container"
     tools:context="com.example.newgps.MainActivity"
     tools:ignore="MergeRootFrame"
+
     >
 
     <LinearLayout
         android:gravity="center"
         android:background="#4f8"
         android:orientation="horizontal"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content">
 
         <Button
@@ -35,12 +38,40 @@
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
+
+
+
     </LinearLayout>
+
+
+
+    <!--
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:orientation="vertical">
+
+          <Button
+              android:id="@+id/testbutton"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="center_horizontal"
+              android:text="@string/testbutton" />
+
+          <FrameLayout
+              android:id="@+id/container2"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content" />
+
+      </LinearLayout>
+  -->
+
+
 
     <TextView
 
         android:id="@+id/text_view"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:textColor="#000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -48,20 +79,25 @@
     <TextView
 
         android:id="@+id/text_gyro"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:textColor="#000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/Tweet1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_margin="10dp"
+        android:textColor="#000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
     </TextView>
 
-
-
-
+    <ImageView
+        android:id="@+id/arrow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:src="@drawable/arrow" />
 
 
 </LinearLayout>
