--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,31 +43,6 @@
 
     </LinearLayout>
 
-
-
-    <!--
-      <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:orientation="vertical">
-
-          <Button
-              android:id="@+id/testbutton"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_gravity="center_horizontal"
-              android:text="@string/testbutton" />
-
-          <FrameLayout
-              android:id="@+id/container2"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-
-      </LinearLayout>
-  -->
-
-
-
     <TextView
 
         android:id="@+id/text_view"
@@ -91,6 +66,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
     </TextView>
+
+    <TextView
+        android:id="@+id/text_elevation"
+        android:layout_margin="10dp"
+        android:textColor="#000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/text_direction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:textColor="#F00"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
     <ImageView
         android:id="@+id/arrow"
